--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@ h1 {
     text-align: center;
 }
 
+a {
+    font-family: Monocraft;
+    font-size: 18px;
+    color: green;
+    margin-top: 20px;
+    text-align: center;
+}
 
 #chooseMusicBtn {
     background-color: #4CAF50;
